tests/macro-tests/cases/property/child_type_is_not_ui_node.stderr
error: property first arg can only have types `impl IntoUiNode` or `&mut WidgetBuilding`
 --> cases/property/child_type_is_not_ui_node.rs:6:29
  |
6 | pub fn invalid_child(child: NotUiNode, input: impl IntoVar<bool>) -> UiNode {
  |                             ^^^^^^^^^
